--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:5000/",
+  "proxy" : "https://smith-blog.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
